# display_orchestrator

./: 99-streamdeck.rules  README.md  commands.txt  config.yml  pyproject.toml
src/monctl/: app.py  cli.py  config.py  ddc.py  ui.py
